website build update

--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <!-- Standard Meta -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title & Branding -->
+  <title>Truth in the Air and Water | Awareness on Chemtrails, Food & Water Safety</title>
+  <meta name="description"
+    content="Explore the hidden dangers in our skies, food, and water. Truth in the Air and Water is dedicated to raising awareness about chemtrails and toxic exposure affecting our health and environment." />
+  <meta name="keywords" content="chemtrail awareness, food poisoning, water contamination, toxins in food, air pollution, environmental health, safe water, organic living, truth in the air, toxic exposure, clean food movement, public health awareness, contaminants in water, chemicals in food, geoengineering, health and wellness" />
+  <meta name="author" content="Truth in the Air and Water Team" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Social Meta Tags -->
+  <meta property="og:title" content="Truth in the Air and Water" />
+  <meta property="og:description"
+    content="Raising awareness about chemtrails, food poisoning, and water contamination." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.truthintheairandwater.com/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Truth in the Air and Water" />
+  <meta name="twitter:description" content="Explore the toxins hidden in our skies, food, and water." />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.truthintheairandwater.com/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Truth in the Air and Water",
+    "url": "https://www.truthintheairandwater.com",
+    "sameAs": [
+      "https://www.facebook.com/truthintheairandwater"
+    ],
+    "description": "A nonprofit initiative raising awareness about chemtrails, food poisoning, and water contamination."
+  }
+  </script>
+</head>
+
+<body>
+  <img src="" alt="preview-image" style="display: none;">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
