--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-  <img src="" alt="preview-image" style="display: none;">
+  <img src="/Truth-in-the-air-and-water/src/assets/chemtrail1-min.jpg" alt="preview-image" style="display: none;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
